--- a/high_cpu.html
+++ b/high_cpu.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles/tarifs.css">
-   
+    <link rel="stylesheet" href="./styles/order-modal.css">
+
 </head>
 
 <body>
@@ -55,7 +56,7 @@
                         </div>
                     </nav>
                 </div>
-               
+
                 <div class="auth-links">
                     <a href="#" class="auth-link" id="loginBtn">вход</a>
                     <span class="auth-separator">/</span>
@@ -102,7 +103,7 @@
                         <button class="mobile-dropdown-toggle">
                             <span>услуги</span>
                             <svg class="arrow-down" width="10" height="6" viewBox="0 0 10 6">
-                                <path d="M1 1L5 5L9 1" stroke="currentColor" stroke-width="1.5" fill="none"/>
+                                <path d="M1 1L5 5L9 1" stroke="currentColor" stroke-width="1.5" fill="none" />
                             </svg>
                         </button>
                         <div class="mobile-dropdown-menu">
@@ -218,7 +219,9 @@
                     </div>
 
                     <div class="tariff-plans">
-                        <div class="plan animate-on-scroll" data-plan="ALB-1">
+                        <div class="plan animate-on-scroll" data-plan="ALB-1" data-price-paris="0.07"
+                            data-price-amsterdam="0.077" data-price-frankfurt="0.063" data-month-paris="17.28"
+                            data-month-amsterdam="19.01" data-month-frankfurt="15.55">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -235,7 +238,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-2">
+                        <div class="plan animate-on-scroll" data-plan="ALB-2" data-price-paris="0.11"
+                            data-price-amsterdam="0.121" data-price-frankfurt="0.099" data-month-paris="25.37"
+                            data-month-amsterdam="27.91" data-month-frankfurt="22.83">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -252,7 +257,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-3">
+                        <div class="plan animate-on-scroll" data-plan="ALB-3" data-price-paris="0.18"
+                            data-price-amsterdam="0.198" data-price-frankfurt="0.162" data-month-paris="44.50"
+                            data-month-amsterdam="48.95" data-month-frankfurt="40.05">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -269,7 +276,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-4">
+                        <div class="plan animate-on-scroll" data-plan="ALB-4" data-price-paris="0.36"
+                            data-price-amsterdam="0.396" data-price-frankfurt="0.324" data-month-paris="89.00"
+                            data-month-amsterdam="97.90" data-month-frankfurt="80.10">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -286,7 +295,8 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-5">
+                        <div class="plan animate-on-scroll" data-plan="ALB-5" data-price-paris="0.72"
+                            data-price-amsterdam="0.792" data-price-frankfurt="0.648">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -332,7 +342,9 @@
                     </div>
 
                     <div class="tariff-plans">
-                        <div class="plan animate-on-scroll" data-plan="ALB-1">
+                        <div class="plan animate-on-scroll" data-plan="ALB-1" data-price-paris="0.14"
+                            data-price-amsterdam="0.154" data-price-frankfurt="0.126" data-month-paris="34.59"
+                            data-month-amsterdam="38.05" data-month-frankfurt="31.13">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -349,7 +361,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-2">
+                        <div class="plan animate-on-scroll" data-plan="ALB-2" data-price-paris="0.28"
+                            data-price-amsterdam="0.308" data-price-frankfurt="0.252" data-month-paris="56.27"
+                            data-month-amsterdam="61.90" data-month-frankfurt="50.64">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -366,7 +380,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-3">
+                        <div class="plan animate-on-scroll" data-plan="ALB-3" data-price-paris="0.56"
+                            data-price-amsterdam="0.616" data-price-frankfurt="0.504" data-month-paris="138.36"
+                            data-month-amsterdam="152.20" data-month-frankfurt="124.52">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -383,7 +399,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-4">
+                        <div class="plan animate-on-scroll" data-plan="ALB-4" data-price-paris="1.12"
+                            data-price-amsterdam="1.232" data-price-frankfurt="1.008" data-month-paris="276.72"
+                            data-month-amsterdam="304.39" data-month-frankfurt="249.05">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -400,7 +418,9 @@
                             </div>
                         </div>
 
-                        <div class="plan animate-on-scroll" data-plan="ALB-5">
+                        <div class="plan animate-on-scroll" data-plan="ALB-5" data-price-paris="2.24"
+                            data-price-amsterdam="2.464" data-price-frankfurt="2.016" data-month-paris="553.44"
+                            data-month-amsterdam="608.78" data-month-frankfurt="498.10">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -685,6 +705,7 @@
     <script src="./scripts/header.js"></script>
     <script src="./scripts/high-cpu-animations.js"></script>
     <script src="./scripts/scrollAnim.js"></script>
+    <script src="./scripts/order.js"></script>
 
     <div id="loginModal" class="modal">
         <div class="modal-content">
@@ -751,6 +772,67 @@
                     <button type="submit" class="sign-in-btn">Создать аккаунт</button>
                 </form>
             </div>
+        </div>
+    </div>
+
+    <div id="orderModal" class="order-modal">
+        <div class="order-modal-content">
+            <button class="order-modal-close">&times;</button>
+            <div class="order-modal-header">
+                <h2 class="order-modal-title">Оформление заказа</h2>
+                <p class="order-modal-subtitle">Выбранный тариф: <span id="selectedPlanName"></span></p>
+            </div>
+            <form class="order-form-form" id="orderForm">
+                <div class="order-form-group">
+                    <label for="billingPeriod">Период оплаты</label>
+                    <select id="billingPeriod" name="billingPeriod">
+                        <option value="hourly">Почасовая оплата</option>
+                        <option value="monthly">Ежемесячная оплата</option>
+                    </select>
+                </div>
+                <div class="order-form-group">
+                    <label for="location">Локация</label>
+                    <select id="location" name="location">
+                        <option value="paris">Париж</option>
+                        <option value="amsterdam">Амстердам</option>
+                        <option value="frankfurt">Франкфурт</option>
+                        <option value="london">Лондон</option>
+                        <option value="denver">Денвер</option>
+                        <option value="vienna">Вена</option>
+                        <option value="stockholm">Стокгольм</option>
+                        <option value="helsinki">Хельсинки</option>
+                        <option value="moscow">Москва</option>
+                        <option value="spb">Санкт-Петербург</option>
+                    </select>
+                </div>
+                <div class="order-form-group">
+                    <label for="os">Операционная система</label>
+                    <select id="os" name="os">
+                        <option value="windows">Windows Server</option>
+                        <option value="ubuntu">Ubuntu</option>
+                        <option value="debian">Debian</option>
+                        <option value="centos">CentOS</option>
+                        <option value="almalinux">AlmaLinux</option>
+                        <option value="rockylinux">Rocky Linux</option>
+                        <option value="freebsd">FreeBSD</option>
+                    </select>
+                </div>
+                <div class="order-form-summary">
+                    <div class="order-form-summary-item">
+                        <span>Стоимость:</span>
+                        <span id="orderPrice">€0.00</span>
+                    </div>
+                    <div class="order-form-summary-item">
+                        <span>Скидка:</span>
+                        <span id="orderDiscount">0%</span>
+                    </div>
+                    <div class="order-form-total">
+                        <span>Итого:</span>
+                        <span id="orderTotal">€0.00</span>
+                    </div>
+                </div>
+                <button type="submit" class="order-form-submit-btn">Оформить заказ</button>
+            </form>
         </div>
     </div>
 </body>
